--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -8,3 +8,12 @@
     margin:0 auto;
     background-color: black;
 }
+
+.btn{
+  
+    color:crimson;
+    font-size: 1.1rem;
+    border-radius:3px;
+    cursor: pointer;
+   
+}
